[tool.poetry]
name = "wikipediarecommender"
version = "0.1.0"
description = ""
authors = ["kordc <karol.cyganik@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
bs4 = "^0.0.1"
tqdm = "^4.64.1"
pandas = "^1.5.1"
numpy = "^1.23.4"
networkx = "^2.8.8"
autopep8 = "^2.0.0"
nltk = "^3.7"
ipykernel = "^6.17.1"


[tool.poetry.group.dev.dependencies]
nxviz = "^0.7.4"
networkx = "^2.8.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
